force-app/main/default/objects/Grant_Application__c/fields/Amount_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Request__c</fullName>
    <label>Amount of Request</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>