force-app/main/default/objects/Grant_Application__c/fields/App_Comp_By_City__c.field-meta.xml
<CustomField>
    <fullName>App_Comp_By_City__c</fullName>
    <label>App Comp By City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>