force-app/main/default/objects/Grant_Application__c/fields/App_Comp_By_Email__c.field-meta.xml
<CustomField>
    <fullName>App_Comp_By_Email__c</fullName>
    <label>App Comp By Email</label>
    <type>Email</type>
</CustomField>