force-app/main/default/objects/Grant_Application__c/fields/App_Comp_By_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Comp_By_Last_Name__c</fullName>
    <label>App Comp By Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>