force-app/main/default/objects/Grant_Application__c/fields/App_Comp_By_Organization__c.field-meta.xml
<CustomField>
    <fullName>App_Comp_By_Organization__c</fullName>
    <label>App Comp By Organization</label>
    <length>80</length>
    <type>Text</type>
</CustomField>