force-app/main/default/objects/Grant_Application__c/fields/App_Comp_By_Phone__c.field-meta.xml
<CustomField>
    <fullName>App_Comp_By_Phone__c</fullName>
    <label>App Comp By Phone</label>
    <type>Phone</type>
</CustomField>