force-app/main/default/objects/Grant_Application__c/fields/App_Comp_By_Relshp_to_Applicant__c.field-meta.xml
<CustomField>
    <fullName>App_Comp_By_Relshp_to_Applicant__c</fullName>
    <label>App Comp By Relshp to Applicant</label>
    <length>80</length>
    <type>Text</type>
</CustomField>