force-app/main/default/objects/Grant_Application__c/fields/App_Comp_By_Street__c.field-meta.xml
<CustomField>
    <fullName>App_Comp_By_Street__c</fullName>
    <label>App Comp By Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>