force-app/main/default/objects/Grant_Application__c/fields/App_Comp_By_Zip__c.field-meta.xml
<CustomField>
    <fullName>App_Comp_By_Zip__c</fullName>
    <label>App Comp By Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>