force-app/main/default/objects/Grant_Application__c/fields/Applicant_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Birthdate__c</fullName>
    <label>Applicant Birthdate</label>
    <type>Date</type>
</CustomField>