force-app/main/default/objects/Grant_Application__c/fields/Applicant_City__c.field-meta.xml
<CustomField>
    <fullName>Applicant_City__c</fullName>
    <label>Applicant City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>