force-app/main/default/objects/Grant_Application__c/fields/Applicant_Has_Trust_Fund__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Has_Trust_Fund__c</fullName>
    <label>Applicant Has Trust Fund</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>