force-app/main/default/objects/Grant_Application__c/fields/Applicant_Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Residence_Type__c</fullName>
    <label>Applicant Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Housing</fullName>
            </value>
            <value>
                <fullName>Private Housing</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
            <value>
                <fullName>Specialized Foster Care</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Assisted Living Facility</fullName>
            </value>
            <value>
                <fullName>Rest Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>