force-app/main/default/objects/Grant_Application__c/fields/Applicant_State__c.field-meta.xml
<CustomField>
    <fullName>Applicant_State__c</fullName>
    <label>Applicant State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>