force-app/main/default/objects/Grant_Application__c/fields/Applicant_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Street_Address__c</fullName>
    <label>Applicant Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>