force-app/main/default/objects/Grant_Application__c/fields/Applicant_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Zip_Code__c</fullName>
    <label>Applicant Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>