force-app/main/default/objects/Grant_Application__c/fields/Application_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Completed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Grant Applications (Application Completed By)</relationshipLabel>
    <relationshipName>Grant_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>