force-app/main/default/objects/Grant_Application__c/fields/Financial_Need_for_Grant__c.field-meta.xml
<CustomField>
    <fullName>Financial_Need_for_Grant__c</fullName>
    <label>Financial Need for Grant</label>
    <type>TextArea</type>
</CustomField>