force-app/main/default/objects/Grant_Application__c/fields/Grant_Application_Signature__c.field-meta.xml
<CustomField>
    <fullName>Grant_Application_Signature__c</fullName>
    <label>Grant Application Signature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>