force-app/main/default/objects/Grant_Application__c/fields/Grant_Mail_City__c.field-meta.xml
<CustomField>
    <fullName>Grant_Mail_City__c</fullName>
    <label>Grant Mail City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>