force-app/main/default/objects/Grant_Application__c/fields/Grant_Mail_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Mail_First_Name__c</fullName>
    <label>Grant Mail First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>