force-app/main/default/objects/Grant_Application__c/fields/Grant_Mail_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Mail_Last_Name__c</fullName>
    <label>Grant Mail Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>