force-app/main/default/objects/Grant_Application__c/fields/Grant_Mail_State__c.field-meta.xml
<CustomField>
    <fullName>Grant_Mail_State__c</fullName>
    <label>Grant Mail State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>