force-app/main/default/objects/Grant_Application__c/fields/Grant_Mail_Street__c.field-meta.xml
<CustomField>
    <fullName>Grant_Mail_Street__c</fullName>
    <label>Grant Mail Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>