force-app/main/default/objects/Grant_Application__c/fields/Grant_Mail_Zip__c.field-meta.xml
<CustomField>
    <fullName>Grant_Mail_Zip__c</fullName>
    <label>Grant Mail Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>