force-app/main/default/objects/Grant_Application__c/fields/Grant_Status__c.field-meta.xml
<CustomField>
    <fullName>Grant_Status__c</fullName>
    <label>Grant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Waiting for Receipts</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>