force-app/main/default/objects/Grant_Application__c/fields/How_Fund_Additional_Amount__c.field-meta.xml
<CustomField>
    <fullName>How_Fund_Additional_Amount__c</fullName>
    <label>How Fund Additional Amount</label>
    <type>TextArea</type>
</CustomField>