force-app/main/default/objects/Grant_Application__c/fields/If_Med_Den_MassHealth_Req_Submitted__c.field-meta.xml
<CustomField>
    <fullName>If_Med_Den_MassHealth_Req_Submitted__c</fullName>
    <label>If Med/Den, MassHealth Req Submitted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>