force-app/main/default/objects/Grant_Application__c/fields/If_Yes_Describe_Procedure__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Describe_Procedure__c</fullName>
    <label>If Yes, Describe Procedure</label>
    <type>TextArea</type>
</CustomField>