force-app/main/default/objects/Grant_Application__c/fields/Internal_Grant_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Internal_Grant_Application_Link__c</fullName>
    <formula>Hyperlink(&quot;/flow/Albert_N_Solomon_Memorial_Trust_Fund_Grant_Application?varRecordId=&quot;&amp;Id,&quot;Internal Grant Application Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Grant Application Link</label>
    <type>Text</type>
</CustomField>