force-app/main/default/objects/Grant_Application__c/fields/Item_or_Service_Requested__c.field-meta.xml
<CustomField>
    <fullName>Item_or_Service_Requested__c</fullName>
    <label>Item or Service Requested</label>
    <type>TextArea</type>
</CustomField>