force-app/main/default/objects/Grant_Application__c/fields/Proced_Purchasing_Items_Services_Prior__c.field-meta.xml
<CustomField>
    <fullName>Proced_Purchasing_Items_Services_Prior__c</fullName>
    <label>Proced Purchasing Items/Services Prior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>