force-app/main/default/objects/Grant_Application__c/fields/Reason_for_Approval_Denial__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Approval_Denial__c</fullName>
    <label>Reason for Approval/Denial</label>
    <type>TextArea</type>
</CustomField>