force-app/main/default/objects/Grant_Application__c/fields/Send_Initial_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Initial_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Initial Email</label>
    <type>Checkbox</type>
</CustomField>