force-app/main/default/objects/Grant_Application__c/fields/Site_Grant_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Site_Grant_Application_Link__c</fullName>
    <formula>Hyperlink(&quot;https://planofma-ri.force.com/guests/s/solomon-grant-application?fptid=&quot;&amp;Id,&quot;Grant Application Site Link&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Grant Application Link</label>
    <type>Text</type>
</CustomField>