force-app/main/default/objects/Grant_Application__c/fields/Why_MassHealth_Denied__c.field-meta.xml
<CustomField>
    <fullName>Why_MassHealth_Denied__c</fullName>
    <label>Why MassHealth Denied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>