force-app/main/default/objects/Grant_Application__c/fields/X18_Digit_Grant_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Grant_Application_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Grant Application ID</label>
    <type>Text</type>
</CustomField>