force-app/main/default/objects/Grant_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant_First_Name__c</columns>
    <columns>Applicant_Last_Name__c</columns>
    <columns>Applicant_City__c</columns>
    <columns>Applicant_State__c</columns>
    <columns>Amount_of_Request__c</columns>
    <columns>Financial_Need_for_Grant__c</columns>
    <columns>Grant_Application_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>